Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -12,8 +12,8 @@
   url={https://receita.economia.gov.br/orientacao/tributaria/cadastros/cadastro-nacional-de-pessoas-juridicas-cnpj/dados-publicos-cnpj}
 }
 
-@MISC{lei:1994:documentos-fiscais,
-  title={Lei nº 8846},
+@MISC{lei:8846:documentos-fiscais,
+  title={Lei nº 8846/1994},
   organization={Brasil},
   year={1994},
   url={http://www.planalto.gov.br/ccivil_03/leis/L8846.htm}
@@ -21,8 +21,8 @@
 
 % Documentos Fiscais
 
-@MISC{lei:1966:codigo_tributario,
-  title={Lei nº 5172},
+@MISC{lei:5172:codigo-tributario,
+  title={Lei nº 5172/1966},
   organization={Brasil},
   year={1966},
   url={http://www.planalto.gov.br/ccivil_03/leis/l5172.htm}
@@ -36,7 +36,7 @@
 }
 
 @MISC{constituicao:emenda42_2003,
-  title={Emenda Constitucional nº42},
+  title={Emenda Constitucional nº42/2003},
   organization={Brasil},
   year={2003},
   url={http://www.planalto.gov.br/ccivil_03/constituicao/Emendas/Emc/emc42.htm}
@@ -89,4 +89,48 @@
   author={Newman, Mark},
   year={2018},
   publisher={Oxford University Press}
+}
+
+% Base de Dados
+
+@MISC{lei:10406:lei-codigo-civil,
+  title={Lei nº 10406/2002},
+  organization={Brasil},
+  year={2002},
+  url={http://www.planalto.gov.br/ccivil_03/leis/2002/l10406compilada.htm}
+}
+
+@MISC{lei:123:lei-estatuto-mei-e-epp,
+  title={Lei nº 123/2006},
+  organization={Brasil},
+  year={2006},
+  url={http://www.planalto.gov.br/ccivil_03/leis/lcp/lcp123.htm}
+}
+
+@MISC{lei:128:lei-mei,
+  title={Lei nº 128/2008},
+  organization={Brasil},
+  year={2008},
+  url={http://www.planalto.gov.br/ccivil_03/leis/lcp/lcp128.htm}
+}
+
+@MISC{lei:12527:lei-de-acesso-a-informacao,
+  title={Lei nº 12527/2011},
+  organization={Brasil},
+  year={2011},
+  url={http://www.planalto.gov.br/ccivil_03/_ato2011-2014/2011/lei/l12527.htm}
+}
+
+@MISC{resolucao-concla:01:cnae,
+  title={Resolução CONCLA nº 01/2006},
+  organization={Brasil},
+  year={2006},
+  url={https://concla.ibge.gov.br/images/concla/documentacao/ResConcla1-2006.pdf}
+}
+
+@MISC{resolucao-concla:02:cnae,
+  title={Resolução CONCLA nº 02/2006},
+  organization={Brasil},
+  year={2006},
+  url={https://concla.ibge.gov.br/images/concla/documentacao/ResConcla2-2006.pdf}
 }
