--- a/thesis.tex
+++ b/thesis.tex
@@ -95,6 +95,9 @@
 % Inclui a lista de símbolos
 \incluilistadesimbolos
 
+% Dependências inseridas pelo autor
+\usepackage{multirow}
+
 % ----
 % Início do documento
 % ----
@@ -124,9 +127,9 @@
 \label{chapter:base-de-dados}
 \input{tex/5-base-de-dados}
 
-\chapter{Crise Econômica}
-\label{chapter:crise-economica}
-\input{tex/6-crise-economica}
+\chapter{Impacto Econômico da Pandemia}
+\label{chapter:impacto-economico}
+\input{tex/6-impacto-economico}
 
 \chapter{Métricas de redes}
 \label{chapter:metricas-redes}
@@ -176,7 +179,7 @@
 % ---
 \begin{apendicesenv}
 
-    \chapter{Tecnologias Utilizadas}
+    \chapter{Armazém de Dados}
     \label{chapter:armazem-de-dados}
     \input{tex/appendix/a-armazem-de-dados}
     
@@ -184,7 +187,7 @@
     \label{chapter:tecnologias-utilizadas}
     \input{tex/appendix/b-tecnologias-utilizadas}
     
-    \chapter{Tecnologias Utilizadas}
+    \chapter{CFOP - Código Financeiro de Operações}
     \label{chapter:cfop}
     \input{tex/appendix/c-cfop}
 
