--- a/tex/2-documentos-fiscais.tex
+++ b/tex/2-documentos-fiscais.tex
@@ -3,7 +3,7 @@ A legislação fiscal brasileira é notoriamente conhecida por ser complexa. Nas
 
 \section{Legislação Brasileira}
 
-O Sistema Tributário Nacional foi instituído pela lei nº 5172 de 1966 \cite{lei:1966:codigo_tributario}, há mais de cinco décadas. Desde então passou por diversas reformas visando aumentar sua eficiência, modernizando-o. O artigo 37 da Constituição Federal, alterado pela Emenda Constitucional nº 42 de 19 de dezembro de 2003 \cite{constituicao:emenda42_2003}, em seu vigésimo segundo inciso prevê:
+O Sistema Tributário Nacional foi instituído pela lei nº 5172 de 1966 \cite{lei:5172:codigo-tributario}, há mais de cinco décadas. Desde então passou por diversas reformas visando aumentar sua eficiência, modernizando-o. O artigo 37 da Constituição Federal, alterado pela Emenda Constitucional nº 42 de 19 de dezembro de 2003 \cite{constituicao:emenda42_2003}, em seu vigésimo segundo inciso prevê:
 
 \begin{citacao}
 Art. 37. A administração pública direta e indireta de qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos princípios de legalidade, impessoalidade, moralidade, publicidade e eficiência e, também, ao seguinte:
@@ -99,11 +99,13 @@ V - compartilhamento da NF-e entre as administrações tributárias;
 VI - preservação do sigilo fiscal, nos termos do Código Tributário Nacional \cite{enat:2005:protocolo3}. 
 \end{citacao}
 
-E por fim, a padronização e aplicação do \sigla{CNAE}{Cadastro Nacional de Atividades Econômicas} para o Cadastro Sincronizado de Contribuintes \cite{enat:2005:protocolo4}.
+E por fim, a padronização e aplicação da \sigla{CNAE}{Classificação Nacional de Atividades Econômicas} para o Cadastro Sincronizado de Contribuintes \cite{enat:2005:protocolo4}.
 
 Essas iniciativas viriam possibilitar então a criação de sistemas automatizados de controle fiscal. Em especial, a criação do SPED e da NF-e possibilitaram o uso de documentos fiscais não só com a finalidade de simplificar as obrigações fiscais das empresas brasileiras, mas também sua utilização como artefato de controle interno, devido à sua riqueza de informações estruturadas.
 
 Na edição seguinte, em 2006, o ENAT ocorreu em Fortaleza-CE e foram estabelecidos protocolos de cooperação técnica que seguiram adicionando novos artefatos, os quais ressaltam-se a implantação da \sigla{NFS-e}{Nota Fiscal de Serviço Eletrônica} e do \sigla{CT-e}{Conhecimento de Transporte Eletrônico}, outros dois documentos fiscais eletrônicos. O encontro segue ocorrendo anualmente e os protocolos tem se aperfeiçoado para melhorar e integrar o sistema tributário e fiscal brasileiro.
+
+\sigla*{Sefaz}{Secretaria da Fazenda}
 
 \subsection{Documentos Fiscais}
 
