--- a/tex/appendix/b-tecnologias-utilizadas.tex
+++ b/tex/appendix/b-tecnologias-utilizadas.tex
@@ -1,2 +1,2 @@
 
-bigquery (sql), biblotecas (networkx, matplotlib, sklearn, outras libs), ferramentas de processamento paralelo, jupyter/google notebooks
+bigquery (sql, tipos de dados), biblotecas (networkx, matplotlib, sklearn, outras libs), ferramentas de processamento paralelo, jupyter/google notebooks
